java_code/java-1563456966405-3768/abc_output
abc.java:1: error: class, interface, or enum expected
importimport java.util.Scanner;
^
1 error
